added notes of week 1

--- a/src/main.tex
+++ b/src/main.tex
@@ -12,8 +12,9 @@
     
     % create the title section
     \input{\templatePath/summary_title.tex} % ChkTex 27
-    
-    
+    \input{sections/Basics.tex}
+    \newpage
+    \input{sections/Appendix.tex}
     
 \end{multicols*}
 \end{document}
