--- a/src/sections/Basics.tex
+++ b/src/sections/Basics.tex
@@ -47,7 +47,7 @@ The \textit{de Briogle relation} connects the wavelength $\lambda$ with the mome
 \subsubsection{Probabilities}
 The probability of finding the particle between $a$ and $b$ at time $t$ is:
 \begin{equation*}
-    \int_a^b {\Psi(x,t)}^*\Psi(x,t)\,dx
+    \int_a^b \underbrace{{\Psi(x,t)}^*\Psi(x,t)}_{|\Psi(x,t)|^2}\,dx
 \end{equation*}
 The probability density of the is given by
 \begin{equation*}
