added details from the book

--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -4,7 +4,7 @@ The following notation is based on the book \textit{Introduction to Quantum Mech
 \begin{align*}
      & \lvert \alpha \rangle                                             &  & \text{Vector}                             \\
      & \alpha_i^{b_j}                                                    &  & \text{Vector element $i$ wrt.\ base } b_j \\
-     & \hat{T}                                                           &  & \text{Linear transformation}              \\
+     & \hat{T}                                                           &  & \text{Linear transformation/ Operator}              \\
      & \mathbf{T}                                                        &  & \text{Matrix}                             \\
      & \widetilde{\mathbf{T}}                                            &  & \text{Transpose}                          \\
      & \mathbf{T}^*                                                      &  & \text{Complex conjugate}                  \\
