--- a/src/sections/Basics.tex
+++ b/src/sections/Basics.tex
@@ -1,6 +1,10 @@
 \section{Introduction}
 \subsection{Statistics}
-The probability $\rho$ is called \textbf{normalized} if
+Given a probability density $\rho$ the probability of obtaining $x$ in the interval [$a,b$] is given be
+\begin{equation*}
+    P_{ab}=\int_{a}^{b} \rho(x)\, dx
+\end{equation*}
+The probability density $\rho$ is called \textbf{normalized} if
 \begin{equation*}
     \int_{-\infty}^{\infty}\rho(x)dx = 1
 \end{equation*}
@@ -22,7 +26,7 @@ The \textbf{variance} ${\sigma_x}^2$ and \textbf{standard deviation} $\sigma_x$ 
 \renewcommand{\arraystretch}{1.3}
 \setlength\tabcolsep{6pt} % default value: 6pt
 \begin{tabularx}{\linewidth}{@{}ll@{}}
-    $\hbar = \frac{h}{2\pi}$ & $h$: Planck constant             \\
+    $\hbar = \frac{h}{2\pi}$ & $h$: Planck constant          \\
     $m,t,x$                  & Mass, time, position          \\
     $V(x,t)$                 & Potential energy function     \\
     $\Psi$                   & Complex particle wavefunction \\
@@ -31,8 +35,8 @@ The \textbf{variance} ${\sigma_x}^2$ and \textbf{standard deviation} $\sigma_x$ 
 \setlength\tabcolsep{6pt} % default value: 6pt
 
 \subsection{Planck}
-When describing black body radiation with classical physics, the problem of \textit{infinite radiation at 
-high frequencies at any temperature} occurs, becuase each of the infinite modes need a small amount of energy.
+When describing black body radiation with classical physics, the problem of \textit{infinite radiation at
+    high frequencies at any temperature} occurs, becuase each of the infinite modes need a small amount of energy.
 In quantum mechancs, each mode can only be filled in discrete amounts of energy $h \nu$:
 \begin{equation*}
     k_B T_{low} \ll h\nu_{high}
@@ -53,10 +57,13 @@ The probability density of the is given by
 \begin{equation*}
     \rho(x,t) = |\Psi(x,t)|^2
 \end{equation*}
-To be physically meaningful, $\Psi$ has to be in $L_2$ (square integrable) and be normalized
-\begin{equation*}
-    \int_{-\infty}^{\infty} |\Psi|^2 dx = 1
-\end{equation*}
+To be physically meaningful, $\Psi$ has to be in $L_2$ (square integrable) and be \textit{normalized}
+\begin{align*}
+    \int_{-\infty}^{\infty} |\Psi(x,t)|^2 dx = 1 \\
+    \frac{d}{dt}\int_{-\infty}^{\infty} |\Psi(x,t)|^2 dx = 0
+\end{align*}
+\textbf{Remark:} If $\Psi(x,t)$ is normalized at $t=0$ it will stay normalized $\forall t$.
+
 
 \subsection{Position, Momentum and Uncertainty}
 Any observable quantity $Q$ has an operator $\hat{Q}$ which can be formulated in terms of the position and momentum operators $\hat{x}, \hat{p}$
@@ -64,15 +71,24 @@ Any observable quantity $Q$ has an operator $\hat{Q}$ which can be formulated in
     \hat{Q}(\hat{x},\hat{p}), \hspace*{10pt} \hat{x},\; \hat{p}=-i\hbar \frac{\partial}{\partial x}
 \end{equation*}
 
+
 \subsubsection{Expectation Value}
+The \textbf{expectation value} of both position and momentum can be optained by
+
 The expectation value can be obtained by measuring the \textbf{observable quantity} on an \textit{quantum mechanical ensemble}:
 \begin{align*}
-    \langle \hat{Q}(\hat{x},\hat{p})\rangle & = \int_{-\infty}^{\infty}\Psi^*\hat{Q}(\hat{x},\hat{p})\Psi dx                    \\
+    \langle \hat{x} \rangle                 & = \int_{-\infty}^{\infty} \hat{x} |\Psi(x,t)|^2 \, dx                                                                                              \\
+    \langle \hat{p} \rangle                 & = \int_{-\infty}^{\infty} \underbrace{-i\hbar \frac{\partial}{\partial x}}_{\hat{p}} |\Psi(x,t)|^2 \, dx & = m \frac{d\langle \hat{x} \rangle}{dt} \\
+    \langle \hat{Q}(\hat{x},\hat{p})\rangle & = \int_{-\infty}^{\infty}\Psi^*\hat{Q}(\hat{x},\hat{p})\Psi dx                                                                                     \\
                                             & = \int_{-\infty}^{\infty}\hat{Q}(\hat{x},\hat{p}) \underbrace{|\Psi|^2}_{\rho} dx
 \end{align*}
+For example, the expectation value of the kinetic energy is
+\begin{align*}
+    \langle \hat{T} \rangle & = -\frac{\hbar^2}{2m}\int_{-\infty}^{\infty}\Psi^*\frac{\partial^2\Psi}{\partial x^2} \,dx
+\end{align*}
 
-\subsubsection{Uncertainty}
+\subsubsection{Heisenberg Uncertainty Principle}
 By gaining certainty on the observation of either position or momentum, the uncertainty of the other one increases
 \begin{equation*}
-    \underbrace{\sigma_x\sigma_p}_{\text{std. dev.}} \geq \frac{\hbar}{2}
+    \underbrace{\sigma_x\sigma_p}_{\text{std.\ dev.}} \geq \frac{\hbar}{2}
 \end{equation*}
