Appendix: ideal gas law. Week1/Week2: revision, amendments

--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -4,7 +4,7 @@ The following notation is based on the book \textit{Introduction to Quantum Mech
 \begin{align*}
      & \lvert \alpha \rangle                                             &  & \text{Vector}                             \\
      & \alpha_i^{b_j}                                                    &  & \text{Vector element $i$ wrt.\ base } b_j \\
-     & \hat{T}                                                           &  & \text{Linear transformation/ Operator}              \\
+     & \hat{T}                                                           &  & \text{Linear transformation/ Operator}    \\
      & \mathbf{T}                                                        &  & \text{Matrix}                             \\
      & \widetilde{\mathbf{T}}                                            &  & \text{Transpose}                          \\
      & \mathbf{T}^*                                                      &  & \text{Complex conjugate}                  \\
@@ -17,6 +17,20 @@ The following notation is based on the book \textit{Introduction to Quantum Mech
 \noindent\begin{align*}
     h = 6.63 \cdot 10^{-34} \;\mathrm{J\cdot s}      &  &  & \text{Planck constant}    \\
     k_b =8.617 \cdot 10^{-5} \;\mathrm{\frac{eV}{K}} &  &  & \text{Boltzmann constant}
+\end{align*}
+
+\subsection{Important Laws from Classical Physics}
+\textbf{Ideal Gas}\\
+Ideal gas law:
+\noindent\begin{align*}
+    PV & =nRT=n k_B T                                             \\
+    \text{with}                                                   \\
+    n  & =\frac{N_{particles}}{N_A} \text{ ($n$: number of Mols)} \\
+    R  & =N_A k_B \text{ universal gas constant}
+\end{align*}
+Distance between atoms:
+\noindent\begin{align*}
+    d & =\left(\frac{V_{gas}}{N}\right)^{1/3}
 \end{align*}
 
 \subsection{Useful Integrals}
