additions to stationary states

--- a/src/sections/02_TISE.tex
+++ b/src/sections/02_TISE.tex
@@ -3,36 +3,66 @@
 \subsection{Stationary States}
 The Schrödinger equation can be solved by separation of variables:
 \noindent\begin{align*}
-    \Psi(x,t)                                                        & = \psi(x)\varphi(t)                                                                                          \\
-    \underbrace{i\hbar\frac1\varphi\frac{d\varphi}{dt}}_{\varphi(t)} & =\underbrace{-\frac{\hbar^2}{2m}\frac1\psi\frac{d^2\psi}{dx^2}+V}_{\psi(x)} = \underbrace{E}_{\text{const.}}
+    \Psi_n(x,t)                                                        & = \psi_n(x)\varphi_n(t)                                                                                          \\
+    \underbrace{i\hbar\frac1\varphi\frac{d\varphi}{dt}}_{\varphi_n(t)} & =\underbrace{-\frac{\hbar^2}{2m}\frac1\psi\frac{d^2\psi}{dx^2}+V}_{\psi_n (x)} = \underbrace{E}_{\text{const.}}
 \end{align*}
+
+\ptitle{LHS:}
+
 The \textbf{time-dependent} part is a first order ODE that can be solved by:
 \noindent\begin{align*}
     \frac{d\varphi}{d\iota} & =-\frac{iE}{\hbar}\varphi \\
-    \varphi_n(t)              & =e^{-iE_n t/\hbar}
+    \varphi_n(t)            & =e^{-iE_n t/\hbar}
 \end{align*}
 
-The \textbf{time-independent} part is a second order ODE, whoose solution depends on the potential $V(x)$.
+\ptitle{RHS:}
 
-\newpar{}
-Generally, these two groups of \textbf{separable solutions} can be combined to form a stationary state
+The \textbf{time-independent} part is a second order ODE, whoose solution depends on the potential $V(x)$ (i.e.\ a measure of the environment of the particle).
 \noindent\begin{equation*}
-    \Psi_n(x,t)=\psi_n(x)e^{-iE_nt/\hbar}
+    \underbrace{\Bigl[\overbrace{-\frac{\hbar^2}{2m}\frac{d^2}{dx^2}}^{E_{kin}}+ \overbrace{V(x)}^{E_{pot}}\Bigr]}_{\widehat{H}}\psi = E\psi
 \end{equation*}
 
-By superposition of the stationary states, the solution of the SE can be obtained as a \textbf{Fourier series}:
+\newpar{}
+Assuming that the particle has only kinetic energy ($V(x) = 0$), two general solutions are possible:
+\noindent\begin{align*}
+    \psi(x) & =A\sin(kx)+B\cos(kx)                                               &  & \text{free particle} \\
+    \psi(x) & =Ce^{ikx}+De^{-ikx}                                                &  & \text{ISW}           \\
+    k       & =\sqrt{\frac{2mE}{\hbar^{2}}}=\frac{p}{\hbar}=\frac{2\pi}{\lambda} &  & \text{wave number}
+\end{align*}
+
+\ptitle{Hamiltonian}
+
+$\widehat{H}$ is the Hamiltonian operator representing \textbf{total energy}:
+\noindent\begin{equation*}
+    \langle H\rangle = E,\quad{\sigma_H}^2 = 0
+\end{equation*}
+
+\textbf{Remarks:}
+\begin{itemize}
+    \item $\widehat{H}\psi = E\psi$ is an \textit{eigenvalue equation}
+    \item every expectation value is constant in time
+\end{itemize}
+
+
+
+
+\subsubsection{Combining the Separable Solutions}
+The \textbf{separable solutions}
+\noindent\begin{equation*}
+    \Psi_n(x,t)=\psi_n(x)e^{-iE_n t/\hbar}
+\end{equation*}
+are \textbf{stationary states} that can be superpositioned to obtain $\Psi(x,t)$ (\textit{Fourier series}):
 \noindent\begin{equation*}
     \Psi(x,t) =\sum_{n=1}^\infty c_n\psi_n(x) \underbrace{e^{-iE_n t/\hbar}}_{\varphi(t)}=\sum_{n=1}^\infty c_n\Psi_n(x,t)
 \end{equation*}
 where $|c_n|^2$ is the \textit{probability that a measurement of the energy would return} $E_n$. Therfore $|c_n|^2$ is normalized and energy is conserved:
 \noindent\begin{align*}
-    \sum_{n=1}^\infty|c_n|^2&=1\\
-    \langle H\rangle&=\sum_{n=1}^\infty|c_n|^2E_n
+    \sum_{n=1}^\infty|c_n|^2 & =1                           \\
+    \langle H\rangle         & =\sum_{n=1}^\infty|c_n|^2E_n
 \end{align*}
 
+\subsubsection{Free Particle}
 
-\subsection{Free Particle}
-
-\subsection{Infinite Square Well}
+\subsubsection{Infinite Square Well (ISW)}
 
 \subsection{Harmonic Oscillator}
