--- a/src/sections/01_Introduction.tex
+++ b/src/sections/01_Introduction.tex
@@ -30,7 +30,7 @@ The \textbf{variance} ${\sigma_x}^2$ and \textbf{standard deviation} $\sigma_x$ 
     $m,t,x$                  & Mass, time, position          \\
     $V(x,t)$                 & Potential energy function     \\
     $\Psi$                   & Complex particle wavefunction \\
-                             & ("probability amplitude")     \\
+                             & (``probability amplitude'')     \\
 \end{tabularx}
 \renewcommand{\arraystretch}{1}
 \setlength\tabcolsep{6pt} % default value: 6pt
@@ -105,7 +105,7 @@ For example, the expectation value of the kinetic energy
 
 \textbf{Remarks:}
 \begin{enumerate}
-    \item An operator $\hat{Q}$ $\textit{represents}$ its observable $Q$ which means that $\hat{Q}$ yields $Q$ when "sandwiching" it and integrating over $\mathbb{R}$.
+    \item An operator $\hat{Q}$ $\textit{represents}$ its observable $Q$ which means that $\hat{Q}$ yields $Q$ when ``sandwiching'' it and integrating over $\mathbb{R}$.
     \item $\textit{Ehrenfest's Theorem}$ states that expectation values in QM follow classical laws (example: $\langle p \rangle$).
 \end{enumerate}
 
