--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -30,7 +30,7 @@ Ideal gas law:
 \end{align*}
 Distance between atoms:
 \noindent\begin{align*}
-    d & =\left(\frac{V_{gas}}{N}\right)^{1/3}
+    d & ={\left(\frac{V_{gas}}{N}\right)}^{1/3}
 \end{align*}
 
 \subsection{Useful Integrals}
