--- a/src/sections/01_Introduction.tex
+++ b/src/sections/01_Introduction.tex
@@ -86,7 +86,7 @@ Any observable quantity $Q$ has an operator $\hat{Q}$ which can be formulated in
 The \textbf{expectation value} of both position and momentum can be optained by
 \begin{align*}
     \langle x \rangle & = \int_{-\infty}^{\infty} \hat{x} |\Psi(x,t)|^2 \, dx                                                                                                         \\
-    \langle p \rangle & = \int_{-\infty}^{\infty} \Psi^* \underbrace{\left(-i\hbar \frac{\partial}{\partial x}\right)}_{\hat{p}} \Psi \, dx & = m \frac{d\langle \hat{x} \rangle}{dt}
+    \langle p \rangle & = \int_{-\infty}^{\infty} \Psi^* \underbrace{\left(-i\hbar \frac{\partial}{\partial x}\right)}_{\hat{p}} \Psi \, dx & = m \frac{d\langle x \rangle}{dt}
 \end{align*}
 In general the expectation value can be obtained by measuring the \textbf{observable quantity} on a \textit{quantum mechanical ensemble} (ensemble of identically prepared systems):
 \begin{align*}
