--- a/src/sections/02_TISE.tex
+++ b/src/sections/02_TISE.tex
@@ -75,7 +75,7 @@ A particle constrained ``walls'' behaves differently from a free particle. Given
 \end{equation*}
 the particle will manifest as infinitely many standing waves
 \noindent\begin{align*}
-    \psi_{n}(x)=\sqrt{\frac{2}{a}}\sin(\frac{n\pi}{a}x)
+    \psi_{n}(x)=\sqrt{\frac{2}{a}}\sin\left(\frac{n\pi}{a}x\right)
 \end{align*}
 each with a corresponding energy (quantized)
 \noindent\begin{equation*}
@@ -93,7 +93,7 @@ each with a corresponding energy (quantized)
     \item $\psi_n$ are eigenfunctions/vectors and $E_n$ are the corresponding eigenvalues
     \item $\psi_n$ are orthonormal base functions (complete). This implies that any function can be  described by this \textit{Fourier series} (\textbf{Dirichlet's theorem}):
     \noindent\begin{equation*}
-        \int_{0}^{L} \psi_m^*\psi_n\; dx = \delta_{mn}= \begin{cases}
+        \int_{0}^{a} \psi_m^*\psi_n\; dx = \delta_{mn}= \begin{cases}
             1 & m=n\\
             0 & m\neq n
         \end{cases}
@@ -104,7 +104,7 @@ each with a corresponding energy (quantized)
 
 These standing waves can be combined to form
 \noindent\begin{equation*}
-    \Psi(x,t)=\sum_{n=1}^{\infty}c_{n} \underbrace{\sqrt{\frac{2}{a}}\sin\left(\frac{n\pi}{a}x\right)}_{\psi_n} \underbrace{\exp\left[-i\frac{n^{2}\pi^{2}\hbar}{2ma^{2}t}\right]}_{\varphi_n}.
+    \Psi(x,t)=\sum_{n=1}^{\infty}c_{n} \underbrace{\sqrt{\frac{2}{a}}\sin\left(\frac{n\pi}{a}x\right)}_{\psi_n} \underbrace{\exp\left[-i\frac{n^{2}\pi^{2}\hbar}{2ma^{2}}t\right]}_{\varphi_n}.
 \end{equation*}
 With the initial condition $\Psi(x,0)$ the weights $c_n$ can be determined:
 \noindent\begin{equation*}
