--- a/src/sections/02_TISE.tex
+++ b/src/sections/02_TISE.tex
@@ -77,9 +77,9 @@ the particle will manifest as infinitely many standing waves
 \noindent\begin{align*}
     \psi_{n}(x)=\sqrt{\frac{2}{a}}\sin\left(\frac{n\pi}{a}x\right)
 \end{align*}
-each with a corresponding energy (quantized)
+each with a corresponding energy (\textbf{quantized})
 \noindent\begin{equation*}
-    E_{n}=\frac{\hbar^{2}k_{n}^{2}}{2m}=\frac{n^{2}\pi^{2}\hbar^{2}}{2ma^{2}}
+    E_{n}=\frac{\hbar^{2}k_{n}^{2}}{2m}=\frac{n^{2}\pi^{2}\hbar^{2}}{2ma^{2}} > 0
 \end{equation*}
 
 \begin{center}
@@ -88,7 +88,7 @@ each with a corresponding energy (quantized)
 
 \textbf{Remarks:}
 \begin{itemize}
-    \item Solutions alternate between \textit{odd} and \textit{even} starting from \textit{odd}
+    \item Solutions alternate between \textit{odd} and \textit{even} starting from $\psi_1$: \textit{odd}
     \item $\psi_{n+1}$ has one node (zero-crossing) more than $\psi_n$
     \item $\psi_n$ are eigenfunctions/vectors and $E_n$ are the corresponding eigenvalues
     \item $\psi_n$ are orthonormal base functions (complete). This implies that any function can be  described by this \textit{Fourier series} (\textbf{Dirichlet's theorem}):
@@ -125,6 +125,7 @@ the corresponding \textbf{shape function} can be determined from the initial con
 
 \begin{itemize}
     \item A free particle can have any positive energy $E$.
+    \item Separable solutions do not represent physical states, therefore $\notin$ Hilbert space.
 \end{itemize}
 
 \ptitle{Group Velocity}
