--- a/src/sections/02_TDSE.tex
+++ b/src/sections/02_TDSE.tex
@@ -25,7 +25,7 @@ The \textbf{time-independent} part is a second order ODE, whoose solution depend
     \Bigl[\overbrace{-\frac{\hbar^2}{2m}\frac{d^2}{dx^2}}^{E_{kin}}+ \overbrace{V(x)}^{E_{pot}}\Bigr]\psi & = E\psi \\
     \widehat{H}\psi                                                                                       & = E\psi
 \end{align*}
-Which is also called the \textbf{time independent} SE (TISE).
+Which is also called the \textbf{time independent} SE (\textbf{TISE}).
 
 \newpar{}
 Assuming that the particle has only kinetic energy ($V(x) = 0$), two general solutions are possible:
