--- a/src/sections/02_TDSE.tex
+++ b/src/sections/02_TDSE.tex
@@ -178,15 +178,28 @@ The TISE becomes
     \frac{-\hbar^2}{2m}\frac{d^2\psi}{dx^2} + \frac{1}{2}m \omega^2 x^2 \psi & = E\psi
 \end{align*}
 
+\ptitle{Ladder Operators}
+
 To solve this TISE one can use the \textbf{rising and lowering operators}: (for details on operators see~\ref{operators})
 \begin{align*}
     \hat{a}_{+} & = \frac{1}{\sqrt{2\hbar m \omega}}\left(-i\hat{p}+m\omega\hat{x}\right) &  & \text{raising operator}  \\
     \hat{a}_{-} & = \frac{1}{\sqrt{2\hbar m \omega}}\left(+i\hat{p}+m\omega\hat{x}\right) &  & \text{lowering operator}
 \end{align*}
-with
-\begin{equation*}
-    \left[\hat{a}_{+},\hat{a}_{-}\right] = 1
-\end{equation*}
+
+\ptitle{Hamiltonian}
+
+The Hamiltonian Operator can now be written as
+\noindent\begin{align*}
+    \hat{H} & =\hbar\omega\left(\hat{a}_{-}\hat{a}_{+}-\frac{1}{2}\right) \\
+            & =\hbar\omega\left(\hat{a}_{+}\hat{a}_{-}+\frac{1}{2}\right)
+\end{align*}
+from which
+\noindent\begin{gather*}
+    \hat{a}_{-}\hat{a}_{+}=\frac{1}{\hbar\omega}\hat{H}+\frac{1}{2} \quad\quad \hat{a}_{+}\hat{a}_{-}=\frac{1}{\hbar\omega}\hat{H}-\frac{1}{2}\\
+    \left[\hat{a}_{-},\hat{a}_{+}\right] = 1
+\end{gather*}
+
+\ptitle{TISE}
 
 Applied to the TISE we get
 \begin{align*}
@@ -223,9 +236,39 @@ For an arbitrary state $n$ the next state is given by
 
 \ptitle{Remarks:}
 \begin{itemize}
-    \item The Energy is quantized.
+    \item The energy is quantized.
     \item $n$ is the number of energy quanta in the oscillator
     \item $\widehat{N} \equiv \hat{a}_{+}\hat{a}_{-} = $ number operator because $\left<N\right> = n$ for $\psi_n$
     \item The lowest state $\psi_0$ has the \textbf{zero point energy}. Even if all the energy is removed from the system (zero Kelvin) the oscillator still has this zero point energy.
     \item Solutions alter between even and odd.
+    \item $\psi_n$ form a complete basis.
+    \item Soft boundary conditions - finite potential at the boundary/barrier.
 \end{itemize}
+
+\ptitle{Specific Expectation Values}
+\noindent\begin{align*}
+    \left\langle x \right\rangle _n   & = 0                                                                                                    & \forall n \in \mathbb{N} \\
+    \left\langle x^2 \right\rangle _n & = \left(n+\frac{1}{2}\right)\frac{\hbar}{m\omega}                                                      & \forall n \in \mathbb{N} \\
+    \left\langle p \right\rangle _n   & = 0                                                                                                    & \forall n \in \mathbb{N} \\
+    \left\langle p^2 \right\rangle _n & = \left(n+\frac{1}{2}\right)\hbar m\omega                                                              & \forall n \in \mathbb{N} \\
+    \left\langle T \right\rangle _n   & = \frac{\left\langle p^2 \right\rangle}{2m} =  \frac{\hbar \omega}{2}\left(n+\frac{1}{2}\right)                                   \\
+    \left\langle V \right\rangle _n   & = \frac{m\omega^2}{2}\left\langle x^2 \right\rangle = \frac{\hbar \omega}{2}\left(n+\frac{1}{2}\right)
+\end{align*}
+Note that the energy $E_n$ is split up equally into kinetic and potential energy $T,V$
+
+\subsection{Commutator}
+\noindent\begin{align*}
+    \left[\hat A,\hat B\right]           & \equiv\hat A\hat B-\hat B\hat A                    \\
+    \left[c,\hat B\right]                & =0                              & c \in \mathbb{R} \\
+    \left[\hat{x},\hat{p}\right]         & =i\hbar                                            \\
+    \left[\hat{a}_{-},\hat{a}_{+}\right] & = 1
+\end{align*}
+
+\textbf{Remark}
+
+For some operators it can be useful to evaluate the commutator on a test function first, and then remove the test function in the end, e.g.:
+\noindent\begin{align*}
+    \left[\frac{d^2}{dx^2}, \hat{x}\right] f(x) & = \frac{d^2}{dx^2} xf(x) - x\frac{d^2}{dx^2}f(x) \\
+                                                & = 2\frac{d}{dx} f(x)                             \\
+    \left[\frac{d^2}{dx^2}, \hat{x}\right]      & = 2\frac{d}{dx}
+\end{align*}
