renamed tdse section

--- a/src/sections/02_Schroedinger_Equation.tex
+++ b/src/sections/02_Schroedinger_Equation.tex
@@ -1,4 +1,4 @@
-\section{Time Dependent SE (TDSE)}
+\section{Schroedinger Equation}
 
 \subsection{Stationary States}
 The Schrödinger equation can be solved by separation of variables:
@@ -285,3 +285,5 @@ For some operators it can be useful to evaluate the commutator on a test functio
                                                 & = 2\frac{d}{dx} f(x)                             \\
     \left[\frac{d^2}{dx^2}, \hat{x}\right]      & = 2\frac{d}{dx}
 \end{align*}
+
+\subsection{Finite Sqare Well}
