--- a/src/main.tex
+++ b/src/main.tex
@@ -13,7 +13,7 @@
     % create the title section
     \input{\templatePath/summary_title.tex} % ChkTex 27
     \input{sections/01_Introduction.tex}
-    \input{sections/02_TDSE.tex}
+    \input{sections/02_Schroedinger_Equation.tex}
     \newpage
     \input{sections/Appendix.tex}
     
