--- a/src/main.tex
+++ b/src/main.tex
@@ -14,6 +14,7 @@
     \input{\templatePath/summary_title.tex} % ChkTex 27
     \input{sections/01_Introduction.tex}
     \input{sections/02_Schroedinger_Equation.tex}
+    \input{sections/03_Formalism.tex}
     \newpage
     \input{sections/Appendix.tex}
     
